# Aurora

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  premake5.lua  setup.bat
.github/workflows/: cmake-multi-platform.yml
application/: premake-application.lua
application/resources/models/: baseplate.gltf
application/resources/shaders/: shader_screen.frag  shader_screen.vert  skybox.frag  skybox.vert
application/source/: Application.cpp  Application.h  main.cpp
application/source/scenes/: MainScene.cpp  MainScene.h  TestScene.cpp  TestScene.h
aurora/: premake-aurora.lua
aurora/source/: Aurora.h  SceneObject.cpp  SceneObject.h  pch.h
aurora/source/core/: Log.cpp  Log.h  Window.cpp  Window.h
aurora/source/renderer/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SceneObject.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
aurora/source/renderer/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h
aurora/source/renderer/primitives/: Quad.cpp  Quad.h
aurora/source/scene/: Scene.h  SceneManager.cpp  SceneManager.h
aurora/source/scene/components/: AmbientLightComponent.h  CameraComponent.h  DirectionalLightComponent.h  MeshComponent.h  TransformComponent.h
aurora/source/scene/systems/: CameraSystem.h  LightSystem.h  RenderSystem.h
editor/: premake-editor.lua
editor/source/: Editor.cpp  Editor.h  main.cpp
include/Aurora/core/: ApplicationBase.cpp  ApplicationBase.h  Window.cpp  Window.h
include/Aurora/event/: Event.h  WindowResize.h
resources/models/: Duck.gltf
resources/shaders/: shader.frag  shader.vert
scripts/: setup-linux.sh  setup-windows.bat
source/: main.cpp  pch.h
source/core/: ApplicationBase.cpp  ApplicationBaseImpl.cpp  ApplicationBaseImpl.h  Game.cpp  Game.h  Log.cpp  Log.h  Window.cpp  Window.h  WindowImpl.cpp  WindowImpl.h
source/event/: EventImpl.cpp  EventImpl.h
source/renderer/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
source/renderer/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp
tests/: CMakeLists.txt  test_math.cpp  test_strings.cpp
